Table User {
  username string [pk]
  email string
  fname string
  lname string
  password string
  iban iban
  picture string
  createdAt datetime
  updatedAt datetime
}

Table Event {
  id uuid [pk]
  title string
  description text
  location string
  date date
  time time

  createdBy string [ref: > User.username]
  createdAt datetime
  updatedAt datetime
}

Table Invitation {
  id uuid [pk]
  guest string [ref: > User.username]
  event uuid [ref: > Event.id]
  status status // 'pending', 'accepted', 'declined'
  invitedAt datetime
  replyedAt datetime
}

Table Retailers {
  id uuid [pk]
  name string
  apiUrl string
}

// Shared item catalog
Table ItemCatalogue {
  id uuid [pk]
  name string
  description text
  imagesUrl string
  price decimal
  retailerUrl string
  retailerId uuid [ref: > Retailers.id, null]
  isCustom boolean
  createdAt datetime
  updatedAt datetime
}

// Junction table for event-specific wishlist entry - represents wishlists
Table EventItems {
  eventId uuid [ref: > Event.id]
  itemId uuid [ref: > ItemCatalogue.id]
  quantityRequested int
  quantityFulfilled int
  priority status // low, medium, high
  createdAt datetime
  updatedAt datetime

  Note: "Composite primary key on (eventId, itemId)"
  indexes {
    (eventId, itemId) [pk]
  }

}

Table Contribution {
  id uuid [pk]
  contributor string [ref: > User.username]
  eventId uuid [ref: > Event.id]
  itemId uuid [ref: > ItemCatalogue.id]
  contributedAt datetime
  amount decimal
  isFulfilled boolean

  Note: "References EventItems via (eventId, itemId)"
}

Table Purchase {
  id uuid [pk]
  purchaser string [ref: > User.username]
  eventId uuid [ref: > Event.id]
  itemId uuid [ref: > ItemCatalogue.id]
  quantity int
  timestamp datetime
  paymentReference string

  Note: "References EventItems via (eventId, itemId)"
}

Table Media {
  id uuid [pk]
  uploader string [ref: > User.username]
  eventId uuid [ref: > Event.id] // Directly linked to the event
  mediaType string // 'image', 'video'
  url string
  caption text
  status status //pending, approved, rejected
  fileType string
  fileSize int
  uploadedAt datetime
}

Table EventReports {
  id uuid [pk]
  reportedEvent uuid [ref: > Event.id]
  reportedBy string [ref: > User.username]
  reason string
  description text
  reportedAt datetime
}

Table UserReports {
  id uuid [pk]
  reportedUser string [ref: > User.username]
  reportedBy string [ref: > User.username]
  reason string
  description text
  reportedAt datetime
}

Table MarkedItems {
  id uuid [pk]
  marker string [ref: > User.username]
  eventId uuid [ref: > Event.id]
  itemId uuid [ref: > ItemCatalogue.id]
  markType string // 'reserved', 'contributing'
  markedAt datetime

  Note: "Indicates a user has marked an item in the context of an event"
}
